--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
   </head>
   <body>
     <div id="header-portion" class="header-portion">
-      <header id="header" class="header"></header>
+      <header id="header" class="header">
+          <img id="header-img" class="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="">
+          <div id="nav-bar-portion" class="nav-bar-portion">
+              <nav id="nav-bar" class="nav-bar">
+                  <ul>
+                      <li><a href="#">Features</a></li>
+                      <li><a href="#">How It Works</a></li>
+                      <li><a href="#">Pricing</a></li>
+                  </ul>
+              </nav>
+          </div>
+      </header>
     </div>
     <div id="main" class="main">
       <div id="moto" class="moto"></div>
