--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       </header>
     </div>
     <div id="main" class="main">
-      <div id="moto" class="moto"></div>
+      <div id="moto" class="moto">
+        <h1>Handcrafted, home-made masterpieces</h1>
+      </div>
       <div id="form-control" class="form-control">
         <form action="" id="form" class="from"></form>
       </div>
