--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         <h1>Handcrafted, home-made masterpieces</h1>
       </div>
       <div id="form-control" class="form-control">
-        <form action="" id="form" class="from"></form>
+        <form action="https://www.freecodecamp.com/email-submit" id="form" class="from">
+          <div id="form-input" class="form-input">
+            <input type="email" name="email" id="email" placeholder="Enter your email address">
+          </div>
+          <div id="form-submit" class="form-submit">
+            <input type="submit" value="Get Started" id="submit" class="submit-btn">
+          </div>
+        </form>
       </div>
       <div id="features" class="features"></div>
       <div id="how-it-works" class="how-it-works"></div>
