--- a/index.html
+++ b/index.html
@@ -68,12 +68,17 @@
         </div>
         <div class="feature">
           <h1>Quality Assurance</h1>
-          <span class="feature-detail">For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
+          <span class="feature-detail">For every purchase you make, we will ensure there are no damages or faults and we
+            will check and test the pitch of your instrument.
           </span>
         </div>
       </div>
     </div>
-    <div id="how-it-works" class="how-it-works"></div>
+    <div id="how-it-works" class="how-it-works">
+      <iframe id="video" height="315" width="560px"
+        src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
+        allowfullscreen=""></iframe>
+    </div>
     <div id="pricing" class="pricing"></div>
   </div>
   <div id="footer" class="footer"></div>
