--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div id="nav-bar-portion" class="nav-bar-portion">
         <nav id="nav-bar" class="nav-bar">
           <ul>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">How It Works</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a class="nav-link" href="#features">Features</a></li>
+            <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+            <li><a class="nav-link" href="#pricing">Pricing</a></li>
           </ul>
         </nav>
       </div>
@@ -36,7 +36,7 @@
           <input type="email" name="email" id="email" placeholder="Enter your email address" />
         </div>
         <div id="form-submit" class="form-submit">
-          <input type="submit" value="Get Started" id="submit" class="submit-btn" />
+          <input type="submit" value="Get Started" id="submit" class="btn" />
         </div>
       </form>
     </div>
@@ -79,7 +79,76 @@
         src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
         allowfullscreen=""></iframe>
     </div>
-    <div id="pricing" class="pricing"></div>
+    <div id="pricing" class="pricing">
+      <div id="tenor-trombone" class="trombone-price">
+        <div class="type">
+          <h3>TENOR TROMBONE</h3>
+        </div>
+        <div class="content">
+
+          <div class="price">
+            <h2>
+              $600
+            </h2>
+          </div>
+          <div class="details">
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum dolor.</p>
+            <p>Lorem ipsum.</p>
+          </div>
+          <div class="btn">
+            <button class="select-btn btn">Select</button>
+          </div>
+        </div>
+      </div>
+      <div id="bass-trombone" class="trombone-price">
+        <div class="type">
+          <h3>BASS TROMBONE</h3>
+        </div>
+        <div class="content">
+
+          <div class="price">
+            <h2>
+              $900
+            </h2>
+          </div>
+          <div class="details">
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum dolor.</p>
+            <p>Lorem ipsum.</p>
+          </div>
+          <div class="btn">
+            <button class="select-btn btn">Select</button>
+          </div>
+        </div>
+      </div>
+      <div id="valve-trombone" class="trombone-price">
+        <div class="type">
+          <h3>VALVE TROMBONE</h3>
+        </div>
+        <div class="content">
+          
+          <div class="price">
+            <h2>
+              $1200
+            </h2>
+          </div>
+          <div class="details">
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum dolor.</p>
+            <p>Lorem ipsum.</p>
+          </div>
+          <div class="btn">
+            <button class="select-btn btn">Select</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
   </div>
   <div id="footer" class="footer"></div>
 </body>
